<resources>
    <!-- Activity Main String -->
    <string name="app_name">Android_Challenge</string>
    <string name="Title">Not Bored</string>
    <string name="participants">Participantes</string>
    <string name="Start">Start</string>
    <string name="Terms">Terms and conditions</string>
    <!-- Activity Term String -->
    <string name="termsText">Lorem ipsum dolor sit amet consectetur adipiscing elit inceptos ridiculus
                             iaculis, nullam ligula elementum duis tellus maecenas nec fermentum sed dictum
                             laoreet, taciti donec habitant quam purus ultricies porta posuere sociis. Cubilia
                             senectus netus integer tempor dignissim viverra nostra tellus scelerisque aliquet,
                             semper penatibus tempus sociosqu class sociis bibendum justo etiam, rutrum aenean
                             et eget pretium volutpat eu dictum dictumst.

                             Praesent gravida ridiculus cursus luctus maecenas in libero mi interdum,
                             auctor ullamcorper eget nam eros condimentum litora tristique erat, fusce rhoncus
                             mauris cras aptent non et ultricies. Iaculis porttitor etiam pulvinar proin fringilla ad,
                             sem ornare sociosqu ultrices litora himenaeos egestas, eros laoreet mauris leo porta. Nibh
                             interdum facilisis dapibus magnis phasellus tortor fusce nostra quam, ante non elementum himenaeos
                             id hac et hendrerit eros, dui at sollicitudin turpis viverra molestie cras quis.

                             Dignissim faucibus auctor in vitae porttitor tellus nascetur tempor sociosqu, elementum
                             dis ultricies eu tempus tincidunt lectus posuere, et ac interdum commodo montes convallis
                             curae facilisis. Vitae diam phasellus litora ad aenean himenaeos, magnis malesuada nec metus faucibus,
                             turpis mollis hac lacinia lacus. Condimentum dis in sed vel molestie integer, gravida eget
                             volutpat interdum bibendum scelerisque magnis, penatibus non sollicitudin convallis egestas.
                             Aptent mi ligula conubia justo habitant cubilia tellus curabitur, a nisi integer non eget
                             vivamus cursus hac, lacus rutrum ridiculus tempor litora nostra dis.

                             Nisl pulvinar taciti tellus diam quam dictum cursus potenti euismod natoque feugiat
                             mattis ornare tortor, aliquam orci dapibus inceptos id egestas ante viverra donec
                             aptent suscipit nulla. Eget nisl fringilla cras felis maecenas nisi ridiculus id
                             conubia hac primis sem ullamcorper porttitor, rutrum ac sodales ultrices vestibulum
                             cum leo semper fusce porta eu fermentum. Proin nisi suspendisse class facilisi curabitur
                             quisque, fusce vulputate semper a nulla velit, duis in orci faucibus turpis. Risus metus
                             magnis aliquam accumsan laoreet congue per, tempus purus et odio senectus sodales vulputate,
                             ligula malesuada dis habitasse nullam pellentesque.</string>
    <string name="errorMessage"> the number of participants is not valid </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="price">Price</string>
    <string name="priceFree">Free</string>
    <string name="priceLow">Low</string>
    <string name="priceMedium">Medium</string>
    <string name="priceHigh">High</string>
    <string name="tryAnother">Try another</string>
</resources>