<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
    android:background="@color">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Title"
        android:textSize="32dp"
        app:layout_constraintBottom_toTopOf="@+id/etParticipant"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.387" />

    <EditText
        android:id="@+id/etParticipant"
        android:layout_width="261dp"
        android:layout_height="57dp"
        android:layout_marginBottom="136dp"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/btnStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:text="@string/participants"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etParticipant"
        tools:layout_editor_absoluteX="70dp" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="311dp"
        android:layout_height="54dp"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="593dp" 
        android:text="@string/Start"/>

    <TextView
        android:layout_width="180dp"
        android:layout_height="27dp"
        android:text="@string/Terms"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStart" />

</androidx.constraintlayout.widget.ConstraintLayout>